--- a/pruebg.html
+++ b/pruebg.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>mi pagina</title>
+
 </head>
 <body>
-    hola carevergas todos
+    hola carevergas todo
+    <p>progreso</p>
 </body>
 </html>
